--- a/app/src/main/res/navigation/navi_main.xml
+++ b/app/src/main/res/navigation/navi_main.xml
@@ -2,9 +2,9 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navi_main"
-    app:startDestination="@id/photoBaseFragment">
+    app:startDestination="@id/photoListFragment">
     <fragment
-        android:id="@+id/photoBaseFragment"
-        android:name="com.mobiotics.templateapp_photoapp.PhotoBaseFragment"
-        android:label="PhotoBaseFragment" />
+        android:id="@+id/photoListFragment"
+        android:name="com.mobiotics.templateapp_photoapp.ui.PhotoListFragment"
+        android:label="PhotoListFragment" />
 </navigation>
